typescript/checker/tests/conformance/interfaces/interfaceDeclarations/interfaceWithCallAndConstructSignature.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            61,
        ),
        hi: BytePos(
            62,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/interfaces/interfaceDeclarations/interfaceWithCallAndConstructSignature.ts:6:5
  |
6 | var f: Foo;
  |     ^

